added find best market function
